--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   "dependencies": {
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.0",
-    "ejs": "~2.5.5",
+    "dotenv": "^4.0.0",
+    "ejs": "^2.5.6",
     "express": "~4.14.1",
     "express-ejs-layouts": "~2.2.0",
+    "express-session": "^1.15.4",
+    "mongoose": "^4.11.3",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "nodemon": "^1.1.2",
+    "passport": "^0.3.2",
     "serve-favicon": "~2.3.2"
   }
 }
