--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "neighbor": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
@@ -21,6 +22,7 @@
     "multer": "^1.3.0",
     "nodemon": "^1.1.2",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.2"
   }
 }
